# UdemyPythonFullStack

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
3_FinalProject/: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
3_FinalProject/.devcontainer/: Dockerfile  devcontainer.json
3_FinalProject/backend/: Dockerfile  api.py  db.py  pyproject.toml  scheduler.py
3_FinalProject/frontend/: Dockerfile  app.py  html_template.py  plotting.py  pyproject.toml
3_FinalProject/frontend/static/: scripts.js  style.css
3_FinalProject/frontend/templates/: plot.html
3_FinalProject/gw2tp/: constants.py  db_schema.py  helper.py  pyproject.toml
